--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password= admin
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.driverclassname = com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jackson.serialization.write_dates_as_timestamps=false
